<resources>
    <string name="app_name">PeopleRestClient</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="update">update</string>
    <string name="example_person_display">Gipsz Jakab (42)</string>
    <string name="unable_to_connect">Unable to connect to server</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
</resources>